name:                autocomplete-example
version:             0.1.0.0
synopsis:            Autocomplete demo with Tries
description:         Please see README.md
homepage:            https://github.com/sambou/autocomplete-example
license:             BSD3
license-file:        LICENSE
author:              Sami Boussaid
maintainer:          sboussaid3@gmail.com
copyright:           2016 Sami Boussaid
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Airports, AutoComplete
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , text
                     , bytestring-trie
                     , bytestring

  default-language:    Haskell2010

executable autocomplete-example-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , autocomplete-example
                     , scotty
                     , transformers
                     , wai-middleware-static
  default-language:    Haskell2010

test-suite autocomplete-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location:
